--- a/package.json
+++ b/package.json
@@ -88,5 +88,16 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@wojtekmaj/react-daterange-picker": "^2.5.0",
+    "@wojtekmaj/react-datetimerange-picker": "^2.4.0",
+    "@wojtekmaj/react-timerange-picker": "^2.4.0",
+    "react-calendar": "^2.19.2",
+    "react-clock": "^2.4.0",
+    "react-date-picker": "^7.10.0",
+    "react-datetime-picker": "^2.9.0",
+    "react-pdf": "^4.1.0",
+    "react-time-picker": "^3.9.0"
+  }
 }
